# hello

./: pyproject.toml
hello/scripts/: say_hello.py
